--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,27 +1,59 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #424242;
-  max-width: 960px;
-  padding: 16px;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  background: linear-gradient(rgb(47, 150, 163), rgb(48, 62, 143));
+}
+.container {
+  // height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  // background: linear-gradient(rgb(47, 150, 163), rgb(48, 62, 143));
+  font-family: sans-serif;
+  color: whitesmoke;
 }
 
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #009688;
+.location,
+.temperature {
+  height: 30vh;
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.temperature {
+  flex-direction: column;
+}
+
+.digree-box {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.digree-box span {
+  margin-left: 10px;
+  font-size: 30px;
+}
+.digree-box h2 {
+  font-size: 40px;
+}
+
+.date {
+  width: 490 px;
+  height: 277 px;
+  padding-top: 36 px;
+  order-radius: 35 px;
+  background-color: rgba(16, 33, 54, 0.59);
+  margin: 0 auto;
   color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
-}
-
-.example .background {
-  height: 240px;
-  // Путь к изображениям из SASS-файла всегда такой, как из папки css
-  background-image: url('../images/demo.jpg');
-  background-size: cover;
-  background-position: center;
+  font-family: Lato;
+  font-weight: 400;
+  padding-top: 26 px;
 }
