--- a/src/js/templates/images.hbs
+++ b/src/js/templates/images.hbs
@@ -2,7 +2,7 @@
 
 <div class="photo-card">
   <a href="{{largeImageURL}}">
-    <img src="{{webformatURL}}" alt="{{tags}}" loading="lazy" />
+    <img src="" data-lazy="{{webformatURL}}" alt="{{tags}}" loading="lazy" height="300px" />
 </a>
   <div class="info">
     <p class="info-item">
