--- a/src/js/templates/images.hbs
+++ b/src/js/templates/images.hbs
@@ -1,25 +1,24 @@
 {{#each this}}
+<a class="gallery-link" href="{{largeImageURL}}">
+    <div class="photo-card">
+      <img src="" data-lazy="{{webformatURL}}" alt="{{tags}}" loading="lazy" width="460px" height="300px" />
 
-<div class="photo-card">
-  <a href="{{largeImageURL}}">
-    <img src="" data-lazy="{{webformatURL}}" alt="{{tags}}" loading="lazy" height="300px" />
-</a>
-  <div class="info">
-    <p class="info-item">
-      <b>Likes: {{likes}}</b>
-    </p>
-    <p class="info-item">
-      <b>Views: {{views}}</b>
-    </p>
-    <p class="info-item">
-      <b>Comments: {{comments}}</b>
-    </p>
-    <p class="info-item">
-      <b>Downloads: {{downloads}}</b>
-    </p>
+    <div class="info">
+        <p class="info-item">
+          <b>Likes: {{likes}}</b>
+        </p>
+        <p class="info-item">
+          <b>Views: {{views}}</b>
+        </p>
+        <p class="info-item">
+          <b>Comments: {{comments}}</b>
+        </p>
+        <p class="info-item">
+          <b>Downloads: {{downloads}}</b>
+        </p>
+    </div>
   </div>
-</div>
-
+</a>
  
 
 {{/each}}
